Cherry-pick cd37141f0b59. rdar://problem/113239461

[inert][iOS] Can't scroll element after inert attribute has been removed
    https://bugs.webkit.org/show_bug.cgi?id=259684
    rdar://113239461

    Reviewed by Wenson Hsieh.

    inert use the same invalidation as pointer-events / user-select as effectivePointerEvents / effectiveUserSelect both read effectiveInert.

    * LayoutTests/fast/scrolling/ios/overflow-scroll-after-inert-change-expected.txt: Added.
    * LayoutTests/fast/scrolling/ios/overflow-scroll-after-inert-change.html: Added.
    * Source/WebCore/rendering/style/RenderStyle.cpp:
    (WebCore::rareInheritedDataChangeRequiresRepaint):
    (WebCore::RenderStyle::changeRequiresRecompositeLayer const):

    Canonical link: https://commits.webkit.org/267030@main

Identifier: 265870.397@safari-7616-branch